--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -493,16 +493,16 @@ service vendor.irsc_util /vendor/bin/irsc_util "/vendor/etc/sec_config"
 
 service vendor.imsqmidaemon /vendor/bin/imsqmidaemon
     class main
-    user system
+    user radio
     socket ims_qmid stream 0660 system radio
     group radio log diag
     writepid /dev/cpuset/system-background/tasks
 
 service vendor.imsdatadaemon /vendor/bin/imsdatadaemon
     class main
-    user system
+    user radio
     socket ims_datad stream 0660 system radio
-    group system wifi radio inet log diag
+    group radio wifi inet log diag
     writepid /dev/cpuset/system-background/tasks
     disabled
 
@@ -517,7 +517,7 @@ service vendor.ims_rtp_daemon /vendor/bin/ims_rtp_daemon
 
 service vendor.imsrcsservice /vendor/bin/imsrcsd
     class main
-    user system
+    user radio
     group radio diag inet log
     writepid /dev/cpuset/system-background/tasks
 
