msm8937-common: Change uid/gid of time_daemon
Squashed of the following 2 commits:

time-services: Remove time_daemon rc definition

Now time_daemon service will start from local rc file
so patch removes rc definition from init.qcom.rc file.

Change-Id: Ia18ffa726c9c7ad6be5193219438b2266c15ae13

time-services: Start time_daemon service from common rc

Currently, time_daemon service is running after statsd
service which is causing some xTS failure. The patch
moves time_daemon service definition to common rc file
so that daemon can start early.

Change-Id: I7ff7a7a3b7ac5077a95157c1785bfb844b92d7dd

Change-Id: I4b46501099fb0e82109b3cabf8440fa0490d507b

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -449,8 +449,9 @@ service vendor.thermal-engine /vendor/bin/thermal-engine
 
 service vendor.time_daemon /vendor/bin/time_daemon
    class main
-   user root
-   group root
+   user system
+   group system
+   capabilities SYS_TIME
 
 on property:vold.decrypt=trigger_restart_framework
     start config_bt_addr
