--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -419,9 +419,9 @@ on post-fs-data
 
 service charger /charger
     class charger
-    group log
-    seclabel u:r:charger:s0
-    disabled
+    user system
+    group system graphics input
+    seclabel u:r:healthd:s0
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
